glx/testdata/invalid/assertion-quality-int-pointer/sources/source-123.glx
sources:
  source-123:
    title: "Test Source"


